--- a/src/app/components/profil/loggedin/profile-tour-list/profile-tour-list.component.html
+++ b/src/app/components/profil/loggedin/profile-tour-list/profile-tour-list.component.html
@@ -1,15 +1,15 @@
 <table class="table p-4" *ngIf="userService.currUser">
   <thead class="thead-cargo">
     <tr>
-      <th>Von</th>
-      <th>Nach</th>
-      <th>Wann?</th>
-      <th>Um?</th>
-      <th>Dauer</th>
-      <th>Stauraum</th>
-      <th>Sitze</th>
-      <th>Preis</th>
-      <th></th>
+      <th class="text-center">Von</th>
+      <th class="text-center">Nach</th>
+      <th class="text-center">Wann?</th>
+      <th class="text-center">Um?</th>
+      <th class="text-center">Dauer</th>
+      <th class="text-center">Stauraum</th>
+      <th class="text-center">Sitze</th>
+      <th class="text-center">Preis</th>
+      <th class="text-center"></th>
     </tr>
   </thead>
   <tbody>
