--- a/src/app/components/profil/loggedin/loggedin.component.html
+++ b/src/app/components/profil/loggedin/loggedin.component.html
@@ -4,7 +4,7 @@
   <div class="flex column profile align-items-center justify-content-between" *ngIf="this.userData.currUser">
 
 
-    <!--    Items-->
+    <!--    Item 1  -->
     <div class="flex column align-items-center">
 
       <div class="mt-3">
@@ -37,7 +37,7 @@
 
     </div>
 
-
+    <!--    Item 2  -->
     <div class="flex column align-items-center">
 
       <div class="mt-3">
@@ -68,16 +68,18 @@
 
   </div>
 
-  <div class="flex column">
+
+
+  <div class="flex column right-box">
 
     <!--        1. Item       -->
     <div class="mt-3" style="height: 40vh; overflow: scroll; overflow-x: hidden">
       <h3 class="h3 font-weight-bold logoGreenDark ml-3">Du fährst</h3>
       <div>
         <app-profile-tour-list *ngIf="ownOffers.length > 0" [usedList]="ownOffers"></app-profile-tour-list>
+
         <div class="container">
           <div class="row">
-
             <!--  falls noch keine Fahrt vorhanden  -->
             <div *ngIf="ownOffers.length === 0" class="card col-7 border-0 mb-3"
                  style="max-width: 600px; height: 25vh">
@@ -98,7 +100,6 @@
         <app-profile-tour-list *ngIf="passengerTours.length > 0" [usedList]="passengerTours"></app-profile-tour-list>
         <div class="container">
           <div class="row">
-
             <!--  falls noch keine Fahrt vorhanden  -->
             <div *ngIf="passengerTours.length === 0" class="card col-7 border-0 mb-3"
                  style="max-width: 600px; height: 25vh">
