initial commit and put position of alerts on absolut

--- a/src/app/components/alerts/alerts.component.css
+++ b/src/app/components/alerts/alerts.component.css
@@ -1,5 +1,8 @@
-.test {
-  z-index: +1;
-  padding-top: 20px;
+p {
   position: absolute;
+  width: 20%;
+  top: 1%;
+  left: 40%;
+  margin-bottom: 0;
 }
+
