logo ist now clickable and navbar will be closed when clicked on an element

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -46,6 +46,10 @@ nav {
   width: 15em;
 }
 
+.logo:hover {
+  cursor: pointer;
+}
+
 /* Navigation on default */
 .primary-navigation {
   list-style: none;
