--- a/src/app/components/tour-details/tour-details.component.html
+++ b/src/app/components/tour-details/tour-details.component.html
@@ -1,20 +1,11 @@
 <div class="container d-flex title-background mw-100 justify-content-center" >
-  <div class="row align-self-center">
-    <div class="col text-center">
-      <div class="h2 logoGreenDark">Buche diese Fahrt</div>
-    </div>
+  <div class="row align-self-center" *ngIf="this.shareData.detailTour">
+    <div class="col h2 logoGreenDark text-center" *ngIf="this.shareData.detailTour.isOffer">Das ist ein Angebot - Sie würden mitfahren</div>
+    <div class="col h2 logoGreenDark text-center" *ngIf="!this.shareData.detailTour.isOffer">Das ist eine Anfrage - Sie wären der Fahrer</div>
   </div>
 </div>
-<!--<div class="row justify-content-center mt-2">
-  <svg xmlns="http://www.w3.org/2000/svg"  width="2em" viewBox="0 0 35 35">
-    <path id="ic_event_24px" d="M26.333,19.333H18v8.333h8.333ZM24.667,1V4.333H11.333V1H8V4.333H6.333A3.318,3.318,0,0,0,3.017,7.667L3,31a3.332,3.332,0,0,0,3.333,3.333H29.667A3.343,3.343,0,0,0,33,31V7.667a3.343,3.343,0,0,0-3.333-3.333H28V1Zm5,30H6.333V12.667H29.667Z" transform="translate(-3 -1)" fill="#208479"/>
-  </svg>
-  <div class="h2">
-    &lt;!&ndash;{{this.tourService.tourDetails?.date}}&ndash;&gt;
-    Datum Platzhalter
-  </div>
-</div>-->
 <div class="container rounded mt-4 shadow bg-white border-0 p-4">
+
   <div class="row">
     <div class="col-4">
       <label for="startCity" class="logoGreenDark mr-1">Von:</label>
