--- a/src/app/components/tour-details/tour-details.component.html
+++ b/src/app/components/tour-details/tour-details.component.html
@@ -62,21 +62,14 @@
     </div>
 
 
-    <div class="col-8 mr-3">
+    <div class="col-8 mr-3" style="background-color: #F3FBED">
       <div class="container">
-
-        <div class="row mb-3">
-          <div class="col font-weight-bold">Fahrzeug:  {{this.car?.model}}, {{this.car?.mark}}</div>
-        </div>
-
-
-        <div class="row" style="height: 11rem">
-          <div class="col" style="background-color: #F3FBED">
+        <div class="row">
+          <div class="col">
             <label class="logoGreenDark">Beschreibung</label>
             <div>{{this.shareData.detailTour?.description}}</div>
           </div>
         </div>
-
       </div>
     </div>
 
@@ -118,8 +111,6 @@
       </div>
 
 
-
-
     </div>
 
     <div class="col text-center ">
@@ -143,6 +134,75 @@
   </div>
 
   <div class="row">
+    <div class="col">
+      <hr/>
+    </div>
+  </div>
+
+  <div class="row" *ngIf="this.driver.trim().length > 0">
+    <div class="container">
+      <div class="row">
+        <div class="col font-weight-bold h5 mb-4">Fahrer:</div>
+      </div>
+      <div class="row">
+        <div class="col-4 d-flex align-items-center justify-content-around">
+
+          <div style="width: 25%" class="text-center">
+            <svg class="profil hover" xmlns="http://www.w3.org/2000/svg" width="3em" viewBox="0 0 65 65">
+              <path id="ic_account_circle_24px"
+                    d="M34.5,2A32.5,32.5,0,1,0,67,34.5,32.512,32.512,0,0,0,34.5,2Zm0,9.75a9.75,9.75,0,1,1-9.75,9.75A9.737,9.737,0,0,1,34.5,11.75Zm0,46.15A23.4,23.4,0,0,1,15,47.435c.1-6.468,13-10.01,19.5-10.01,6.467,0,19.4,3.542,19.5,10.01A23.4,23.4,0,0,1,34.5,57.9Z"
+                    transform="translate(-2 -2)" fill="#208479"/>
+            </svg>
+          </div>
+          <div class="" style="width: 75%">{{this.driver}}</div>
+        </div>
+
+        <div class="col-4 d-flex align-items-center justify-content-center"><b class="mr-1">Fahrzeug:</b>{{this.car?.model}}</div>
+        <div class="col-4 d-flex align-items-center justify-content-center"><b class="mr-1">Kennzeichen:</b>{{this.car?.mark}}</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row" *ngIf="this.passengers.length !== 0">
+    <div class="col">
+      <hr/>
+    </div>
+  </div>
+
+  <div class="row">
+
+    <div class="container">
+      <div class="row mb-4" *ngIf="this.passengers.length !== 0">
+        <div class="col-4 font-weight-bold h5 d-flex ">
+          <div>Mitfahrer:</div>
+        </div>
+      </div>
+      <div class="row" *ngFor="let passenger of passengers; let i = index">
+        <div class="col d-flex align-items-center justify-content-around">
+          <div class="text-center" style="width: 25%">
+            <svg class="profil hover" xmlns="http://www.w3.org/2000/svg" width="3em" viewBox="0 0 65 65">
+              <path id="ic_account_circle_24px"
+                    d="M34.5,2A32.5,32.5,0,1,0,67,34.5,32.512,32.512,0,0,0,34.5,2Zm0,9.75a9.75,9.75,0,1,1-9.75,9.75A9.737,9.737,0,0,1,34.5,11.75Zm0,46.15A23.4,23.4,0,0,1,15,47.435c.1-6.468,13-10.01,19.5-10.01,6.467,0,19.4,3.542,19.5,10.01A23.4,23.4,0,0,1,34.5,57.9Z"
+                    transform="translate(-2 -2)" fill="#208479"/>
+            </svg>
+          </div>
+          <div class="" style="width: 75%"> {{this.passengersName[i]}}</div>
+        </div>
+
+
+        <div class="col d-flex align-self-center justify-content-center">
+          <div><b class="mr-1">Sitzplätze:</b> {{passenger.seats}}</div>
+        </div>
+
+        <div class="col d-flex align-self-center justify-content-center">
+          <div><b class="mr-1">Stauraum:</b> {{passenger.storage}}m&#178;</div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row" *ngIf="this.passengers.length !== 0">
     <div class="col">
       <hr/>
     </div>
