switch between Angebot and Anfrage now correctly displayed on profile page. Also changed "Bearbeiten" to "Speichern" on editTours page and a notification if the user changes the type

--- a/src/app/components/main-page/suchleiste/suchleiste.component.html
+++ b/src/app/components/main-page/suchleiste/suchleiste.component.html
@@ -20,6 +20,7 @@
           <div class="col colpad">
             <!--<input type="number" class="form-control text-opaque" placeholder="Mitfahrer">-->
             <select class="form-control text-opaque form-control-lg" name="passengers" [(ngModel)]="passengers">
+              <option value="0" style="color: black">0</option>
               <option value="1" style="color: black">1</option>
               <option value="2" style="color: black">2</option>
               <option value="3" style="color: black">3</option>
@@ -34,6 +35,7 @@
           <div class="col colpad">
             <!--<input type="number" class="form-control text-opaque" placeholder="Gepäck">-->
             <select class="form-control text-opaque form-control-lg" name="storage" [(ngModel)]="storage">
+              <option value="0" style="color: black">0</option>
               <option value="1" style="color: black">1</option>
               <option value="2" style="color: black">2</option>
               <option value="3" style="color: black">3</option>
@@ -81,6 +83,7 @@
           <div class="col colpad">
             <!--<input type="number" class="form-control text-opaque" placeholder="Mitfahrer">-->
             <select class="form-control text-opaque form-control-lg" name="passengers" [(ngModel)]="passengers">
+              <option value="0" style="color: black">0</option>
               <option value="1" style="color: black">1</option>
               <option value="2" style="color: black">2</option>
               <option value="3" style="color: black">3</option>
@@ -95,6 +98,7 @@
           <div class="col colpad">
             <!--<input type="number" class="form-control text-opaque" placeholder="Gepäck">-->
             <select class="form-control text-opaque form-control-lg" name="storage" [(ngModel)]="storage">
+              <option value="0" style="color: black">0</option>
               <option value="1" style="color: black">1</option>
               <option value="2" style="color: black">2</option>
               <option value="3" style="color: black">3</option>
