--- a/src/app/components/tour-edit/tour-edit.component.html
+++ b/src/app/components/tour-edit/tour-edit.component.html
@@ -149,7 +149,7 @@
         <button class="btn btn-block" style="background-color: lightgrey" (click)="fillFields(); calculateEndTime()">Änderungen verwerfen</button>
       </div>
       <div class="col-4 mt-4 mb-4">
-        <button class="btn btn-success btn-block" (click)="checkInput()">Bearbeiten</button>
+        <button class="btn btn-success btn-block" (click)="checkInput()">Speichern</button>
       </div>
     </div>
   </div>
