--- a/src/app/components/carlist/car-item/car-item.component.html
+++ b/src/app/components/carlist/car-item/car-item.component.html
@@ -3,11 +3,24 @@
     <div class="modal-title text-center h4 mx-auto logoGreenDark">Fahrzeug</div>
   </div>
   <div class="card-body" *ngIf="car">
-    <h5 class="card-title">{{car.model}}</h5>
+    <div class="row">
+      <div class="form-group col-md-12">
+
+        <input #mail
+               type="text"
+               class="form-control "
+               id="inputEmail"
+               placeholder=""
+
+               [(ngModel)]="car.mark">
+
+      </div>
+    </div>
+   <!-- <h5 class="card-title">{{car.model}}</h5>
     <p class="card-text">{{car.mark}}</p>
     <p class=" card text">{{car.seats}} Plätze</p>
     <p class="card text" >{{car.storage}} </p>
    <a class="btn btn-primary  btn-success mr-5">Speichern</a>
-    <a class="btn btn-primary btn-danger ml-1" (click)="deleteEvent.emit()">Löchen</a>
+    <a class="btn btn-primary btn-danger ml-1" (click)="deleteEvent.emit()">Löschen</a>-->
   </div>
 </div>
