WIP: KMSWS21T04-137 Hot-fix in tour-details (#62)
* initial commit

* improved synchronisation of driver and passengers

--- a/src/app/components/tour-details/tour-book/tour-book.component.html
+++ b/src/app/components/tour-details/tour-book/tour-book.component.html
@@ -47,7 +47,7 @@
         <div class="row justify-content-center">
           <div class="col-6 ">
             <button type="button" class="btn btn-success mx-auto m-3 btn-block"
-                    (click)="bookIfOffer(storSelect.value, seatSelect.value)">Buchen
+                    (click)="bookIfOffer(seatSelect.value, storSelect.value)">Buchen
             </button>
           </div>
         </div>
@@ -104,3 +104,4 @@
     </div>
   </div>
 </ng-template>
+
