--- a/src/app/components/main-page/suchleiste/suchleiste.component.css
+++ b/src/app/components/main-page/suchleiste/suchleiste.component.css
@@ -56,6 +56,14 @@ display: none;
   padding: 0;
 }
 
+.form-control-lg-costum{
+  height: 3.5em;
+  padding:.5rem 1rem;
+  font-size:1.25rem;
+  line-height:1.5;
+  border-radius:.3rem
+}
+
 .form-row-style {
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(5px);
