Text is now always displayed correctly

--- a/src/app/components/tour-site/tour-site.component.html
+++ b/src/app/components/tour-site/tour-site.component.html
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-12" *ngIf="firstSearch">
+    <div class="col-12" *ngIf="isOfferEmpty && isRequestEmpty && firstSearch">
       <div class="center mt-5">
         <h1 style="font-size: 2em; text-align: center;">Gib ein Startpunkt, ein Reiseziel und ein Datum an um Fahrten zu sehen</h1>
       </div>
