--- a/src/app/components/tour-card/tour-card.component.html
+++ b/src/app/components/tour-card/tour-card.component.html
@@ -66,7 +66,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="2em" viewBox="0 0 35 33.25">
             <path id="ic_work_24px" d="M33.5,9h-7V5.5A3.488,3.488,0,0,0,23,2H16a3.488,3.488,0,0,0-3.5,3.5V9h-7a3.473,3.473,0,0,0-3.482,3.5L2,31.75a3.488,3.488,0,0,0,3.5,3.5h28a3.488,3.488,0,0,0,3.5-3.5V12.5A3.488,3.488,0,0,0,33.5,9ZM23,9H16V5.5h7Z" transform="translate(-2 -2)" fill="#208479"/>
           </svg>
-          <span class="logoGreenDark ml-1">{{this.tour.storage}}</span>
+          <span class="logoGreenDark ml-1">{{this.freeStorage}}</span>
         </div>
 
         <div class="col text-center">
@@ -75,7 +75,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="2em" viewBox="0 0 35 35">
             <path id="ic_perm_identity_24px" d="M21.5,8.156a4.594,4.594,0,1,1-4.594,4.594A4.593,4.593,0,0,1,21.5,8.156m0,19.687c6.5,0,13.344,3.194,13.344,4.594v2.406H8.156V32.438c0-1.4,6.847-4.594,13.344-4.594M21.5,4a8.75,8.75,0,0,0,0,17.5,9.171,9.171,0,0,0,5.78-2.179,8.385,8.385,0,0,0,2.97-6.571A8.748,8.748,0,0,0,21.5,4Zm0,19.688c-5.841,0-17.5,2.931-17.5,8.75V39H39V32.438C39,26.619,27.341,23.688,21.5,23.688Z" transform="translate(-4 -4)" fill="#208479"/>
           </svg>
-          <span class="logoGreenDark ml-1"> {{this.tour.seats}}</span>
+          <span class="logoGreenDark ml-1"> {{this.freeSeats}}</span>
         </div>
 
         <div class="col text-center">
