fixed some bugs

--- a/src/app/components/tour-details/tour-book/tour-book.component.html
+++ b/src/app/components/tour-details/tour-book/tour-book.component.html
@@ -96,7 +96,7 @@
 
       <div class="row justify-content-center">
         <div class="col-6">
-          <button type="button" class="btn btn-danger mx-auto btn-block" (click)="activeModal.dismiss()">Abbrechen
+          <button type="button" class="btn btn-danger mx-auto btn-block" (click)="activeModal.dismiss([this.tour, false])">Abbrechen
           </button>
         </div>
       </div>
